<resources>
    <string name="app_name">RandomUsers</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="name">Name:-</string>
    <string name="gender">Gender:-</string>
    <string name="address">Address:-</string>
    <string name="dob">DOB:-</string>
    <string name="country">Country:-</string>
    <string name="number">Number:-</string>
</resources>