<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/CVUserdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/light_gray"
        android:elevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/UserProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toEndOf="@+id/UserProfile"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserNameData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvUserName"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toEndOf="@+id/UserProfile"
                app:layout_constraintTop_toBottomOf="@+id/tvUserNameData" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserGenderData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvUserGender"
                app:layout_constraintTop_toBottomOf="@+id/tvUserNameData" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserDob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:text="@string/dob"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toEndOf="@+id/UserProfile"
                app:layout_constraintTop_toBottomOf="@+id/tvUserGender" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserDobData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvUserDob"
                app:layout_constraintTop_toBottomOf="@+id/tvUserGenderData" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:text="@string/country"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toEndOf="@+id/UserProfile"
                app:layout_constraintTop_toBottomOf="@+id/tvUserDobData" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserCountryData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvUserCountry"
                app:layout_constraintTop_toBottomOf="@+id/tvUserDobData" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/number"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/UserProfile"
                app:layout_constraintTop_toBottomOf="@+id/tvUserCountry"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserNumberData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="start"
                android:text=""
                android:layout_marginTop="@dimen/_3sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toEndOf="@+id/tvUserNumber"
                app:layout_constraintTop_toBottomOf="@+id/tvUserCountry"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toEndOf="@+id/UserProfile"
                app:layout_constraintTop_toBottomOf="@+id/tvUserNumber" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvUserAddressData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_alignStart="@+id/tvUserAddress"
                    android:text="fddddddddddddddddddddddddddddddddddddddd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tvUserNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvUserAddress"
                   />







        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>